--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,10 @@ theme: minima
 plugins:
   - jekyll-feed
 
+header_pages:
+  - about.md
+  - backlog.md
+
 # Jekyll theme console settings
 # header_pages:
 #   - index.md
@@ -39,7 +43,7 @@ plugins:
 # style: dark # dark (default) or light
 # listen_for_clients_preferred_style: true # true or false (default)
 
-footer: 'follow us on <a href="https://twitter.com/xxx">twitter</a>'
+# footer: 'follow us on <a href="https://twitter.com/xxx">twitter</a>'
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
