--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: My experiments with code
+title: My experiments
 email: jeswinsimon@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Jeswin Simon | My Blog
